# Python-POO-Duck

./: .gitignore  README.md
.github/workflows/: ci.yml  report.yml
projeto_1/: README.md  justfile  pyproject.toml  report.just
projeto_1/.github/workflows/: ci.yml
projeto_1/docs/: requisitos.md
projeto_1/docs/relatorio-final/: _metadata.tex  body.tex  main.tex
projeto_1/docs/relatorio-parte-2/: _configuration.tex  _main.tex  _metadata.tex  body.tex
projeto_1/examples/: README.md  insumo_demo.output_client.txt  insumo_demo.output_servidor.txt  insumo_demo.sh  post_homem_hora.json  post_ingrediente.json  post_pedido.json  post_quantidade_invalida.json  post_tipo_invalido.json
projeto_1/src/projeto_1/: main.py
projeto_1/src/projeto_1/api/: app.py  insumo.py  receita.py  relatorio.py  status.py
projeto_1/src/projeto_1/dominio/: base.py  homem_hora.py  ingrediente.py  pedido.py  receita.py  relatorio.py
projeto_1/src/projeto_1/persistencia/: base.py  insumo.py  receita.py
projeto_1/tests/: test_api.py  test_base.py  test_homem_hora.py  test_ingrediente.py  test_insumo.py  test_main.py  test_pedido.py  test_receita.py  test_receita_controller.py  test_relatorio.py  test_repositorio_insumo.py  test_repositorio_insumo_db.py  test_repositorio_receita.py  test_repositorio_receita_db.py
projeto_1/tests/api/: conftest.py  test_insumo.py  test_relatorio.py  test_status.py
projeto_2/: README.md  justfile  pyproject.toml  python.just  report.just
projeto_2/docs/: uml-modelagem.drawio
projeto_2/tests/: test_p2_controller.py  test_p2_entidade.py  (+2 more)
(+35 files in other folders)
